[gd_scene load_steps=4 format=3 uid="uid://j60i8gmr53dn"]

[ext_resource type="Script" uid="uid://ckpfqvro2pxkj" path="res://Game/Inventory/inventory_slot.gd" id="1_amtx1"]
[ext_resource type="Texture2D" uid="uid://b3yyl6yfh4ybv" path="res://Game/MiningScene/Mineable/Assets/collectable_rock.png" id="2_a623x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a623x"]

[node name="InventorySlot" type="Control"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -270.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_amtx1")

[node name="OuterRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.83, 0.697615, 0.1079, 1)

[node name="InnerRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -18.0
offset_right = 18.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuantityLabel" type="Label" parent="InnerRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "1"

[node name="ItemIcon" type="Sprite2D" parent="InnerRect"]
position = Vector2(20, 20)
texture = ExtResource("2_a623x")

[node name="ItemButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_a623x")

[node name="UsagePanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -20.0
offset_right = 48.0
offset_bottom = -5.0
color = Color(0.831373, 0.698039, 0.109804, 1)

[node name="UseButton" type="Button" parent="UsagePanel"]
layout_mode = 0
offset_right = 23.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 8
text = "Use"

[node name="DropButton" type="Button" parent="UsagePanel"]
layout_mode = 0
offset_left = 23.0
offset_right = 52.0
offset_bottom = 20.0
theme_override_font_sizes/font_size = 8
text = "Drop
"

[connection signal="pressed" from="ItemButton" to="." method="_on_item_button_pressed"]
